fix: 修复 bin 没有正确配置的问题

--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "lif-tools",
   "author": "苯苯 <854363956@qq.com>",
   "version": "0.0.1",
-  "bin": "bin/cli.js",
+  "bin": {
+    "lif-tools": "bin/cli.js"
+  },
   "license": "MIT",
   "files": [
     "bin",
