--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@testing-library/react": "^12.1.1",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
     "babel-jest": "^27.2.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
