--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@weblif/preset-cli",
   "author": "苯苯 <854363956@qq.com>",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "bin": "bin/cli.js",
   "license": "MIT",
   "files": [
@@ -26,11 +26,14 @@
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
+    "@types/jest": "^27.0.2",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@testing-library/react": "^12.1.1",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "babel-jest": "^27.2.3",
+    "jest": "^27.2.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
