--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@weblif/preset-cli",
   "author": "苯苯 <854363956@qq.com>",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "bin": "bin/cli.js",
   "license": "MIT",
   "files": [
@@ -31,6 +31,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/react": "^12.1.1",
+    "@typescript-eslint/typescript-estree": "^5.4.0",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "babel-jest": "^27.2.3",
     "jest": "^27.2.4",
