--- a/package.json
+++ b/package.json
@@ -1,40 +1,44 @@
 {
   "name": "@weblif/cli",
   "author": "苯苯 <854363956@qq.com>",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "bin": "bin/cli.js",
   "license": "MIT",
   "files": [
-    "bin",
-    "preset"
+    "bin"
   ],
   "scripts": {
-    "start": "tsc --watch",
+    "start": "cross-env TEST=true ts-node src/cli.ts",
     "build": "tsc",
     "publish:canary": "npm publish --tag canary --access public",
     "prepublishOnly": "yarn build"
   },
   "dependencies": {
     "ansi-colors": "^4.1.1",
-    "handlebars": "^4.7.7",
-    "inquirer": "^8.1.5"
+    "axios": "^0.26.1",
+    "cli-progress": "^3.10.0",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^8.1.5",
+    "jszip": "^3.9.1"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.9.2",
+    "@types/fs-extra": "^9.0.13",
     "@types/inquirer": "^8.1.3",
     "@types/node": "^16.10.1",
+    "cross-env": "^7.0.3",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
   "peerDependencies": {
-    "@types/jest": "^27.0.2",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@testing-library/react": "^12.1.1",
-    "@typescript-eslint/typescript-estree": "^5.4.0",
+    "@types/jest": "^27.0.2",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/typescript-estree": "^5.4.0",
     "babel-jest": "^27.2.3",
-    "jest": "^27.2.4",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -42,6 +46,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^27.2.4",
     "prettier": "^2.4.1",
     "prettier-eslint": "^13.0.0",
     "typescript": "^4.4.3"
